[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "lowbar"
version = "0.1.2"
authors = [
  { name="AnnikaV9", email="carrot.moncher@gmail.com" },
]
description = "The simplest loading bar for python."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: The Unlicense (Unlicense)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AnnikaV9/lowbar"
"Bug Tracker" = "https://github.com/AnnikaV9/lowbar/issues"